formatted results and no results page to match rest of app

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -284,12 +284,14 @@ body {
 .search-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .search-bar {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .search-bar input[type="text"] {
@@ -325,6 +327,10 @@ body {
     font-size: 50px;
     color: red;
     font-weight: bold;
+}
+
+.search-result-content > p {
+    text-align: center;
 }
 
 
