--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,6 +23,14 @@
     font-size: 24px;
 }
 
+/***************** login banner styles *****************/
+.banner {
+    padding: 125px;
+    text-align: center;
+    background: rgb(175, 222, 249);
+    color: black;
+    font-size: 60px;
+}
 /***************** header styles *****************/
 .header {
     background-color:#7cbced;
