reword edit from details to content

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,7 +6,7 @@
         <input name="title" id="title" type="text" value="{{doc.title}}" required>
     </div>
     <div>
-        <label for="details">Details</label>
+        <label for="details">Content</label>
         <textarea name="details" id="details">{{doc.content}}</textarea>
     </div>
     <div>
